--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         main {
-            color: var(--tg-theme-secondary-text-color);
+            color: var(--tg-theme-text-color);
 	    background: var(--tg-theme-bg-color);
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -47,6 +47,8 @@
 
         h1 {
             text-align: center;
+  	    color: var(--tg-theme-text-color);
+
         }
 
         table {
@@ -109,6 +111,7 @@
                     <td>Тотал меньше 2.5</td>
                     <td>1.75</td>
                 </tr>
+                <!-- Добавьте больше рядов для других коэффициентов -->
             </tbody>
         </table>
         <button id="A">Посмотреть историю матчей команды А</button>
