--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            color: var(--tg-theme-text-color);
+            color: var(--tg-theme-bg-color);
 	    background: var(--tg-theme-bg-color);
             margin: 0;
             padding: 0;
