--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            color: #00000;
             margin: 0;
             padding: 0;
             display: flex;
