--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         body {
             font-family: Arial, sans-serif;
             color: #F08080;
+	    background-color: #f9f9f9;
             margin: 0;
             padding: 0;
             display: flex;
