--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
         main {
             border-radius: 8px;
+            color: #F08080;
+	    background-color: #f9f9f9;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
             width: 300px;
