--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            color: #F08080;
-	    background-color: #f9f9f9;
+	    background-color: #F08080;
             margin: 0;
             padding: 0;
             display: flex;
@@ -21,8 +20,6 @@
 
         main {
             border-radius: 8px;
-            color: #F08080;
-	    background-color: #f9f9f9;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
             width: 300px;
