--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	    <style>
         body {
             font-family: Arial, sans-serif;
-	    background-color: #F08080;
+	    background-color: #272727;
             margin: 0;
             padding: 0;
             display: flex;
