--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
 
         th {
-            background-color: #f9f9f9;
+            background-color: #272727;
         }
 
         tr:hover {
@@ -62,7 +62,7 @@
         }
 
         a {
-            color: #007bff;
+            color: #272727;
             text-decoration: none;
         }
 
