--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
 
         th {
-            background-color: #272727;
+            background-color: #d8d8d8;
         }
 
         tr:hover {
