--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Test</title>
-	    <style>
+    <style>
         body {
             font-family: Arial, sans-serif;
-	    background-color: #272727;
             margin: 0;
             padding: 0;
             display: flex;
@@ -54,7 +53,7 @@
         }
 
         th {
-            background-color: #d8d8d8;
+            background-color: #f9f9f9;
         }
 
         tr:hover {
@@ -62,7 +61,7 @@
         }
 
         a {
-            color: #272727;
+            color: #007bff;
             text-decoration: none;
         }
 
@@ -102,6 +101,7 @@
                     <td>Тотал меньше 2.5</td>
                     <td>1.75</td>
                 </tr>
+                <!-- Добавьте больше рядов для других коэффициентов -->
             </tbody>
         </table>
         <button id="A">Посмотреть историю матчей команды А</button>
