--- a/index.html
+++ b/index.html
@@ -1,112 +1,45 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Test</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-	    background-color: #fafafa;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-
-        main {
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            width: 300px;
-        }
-	
-	button {
-	    border: 0;
-	    border-radius: 5px;
-	    margin-top: 50px;
-	    height: 60px;
-	    width: 200px;
-	    font-size: 20px;
-	    cursor: pointer;
-	}
-	
-	button:hover {
-	}	
-
-        h1 {
-            text-align: center;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #f9f9f9;
-        }
-
-        tr:hover {
-            background-color: #eee;
-        }
-
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-            a:hover {
-                text-decoration: underline;
-            }
-    </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<title>Document</title>
 </head>
 <body>
-    <main>
-        <h1>Коэффициенты для ставок</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th>Событие</th>
-                    <th>Коэффициент</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Победа команды А</td>
-                    <td>1.85</td>
-                </tr>
-                <tr>
-                    <td>Победа команды Б</td>
-                    <td>2.10</td>
-                </tr>
-                <tr>
-                    <td>Ничья</td>
-                    <td>3.50</td>
-                </tr>
-                <tr>
-                    <td>Тотал больше 2.5</td>
-                    <td>1.90</td>
-                </tr>
-                <tr>
-                    <td>Тотал меньше 2.5</td>
-                    <td>1.75</td>
-                </tr>
-                <!-- Добавьте больше рядов для других коэффициентов -->
-            </tbody>
-        </table>
-        <button id="A">Посмотреть историю матчей команды А</button>
-	<button id="B">Посмотреть историю матчей команды Б</button>
-    </main>
+	<div class="container">
+		<div class="inner">
+			<div class="item">
+				<img src="1.png" alt="" class="img">
+				<button class="btn" id="btn1">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="" class="img">
+				<button class="btn" id="btn2">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="" class="img">
+				<button class="btn" id="btn3">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="" class="img">
+				<button class="btn" id="btn4">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="" class="img">
+				<button class="btn" id="btn5">Add</button>
+			</div>
+			<div class="item">
+				<img src="1.png" alt="" class="img">
+				<button class="btn" id="btn6">Add</button>
+			</div>
+		</div>
+	</div>
+	<div class="usercard" id="usercard">
+		
+	</div>
+
+	<script src="https://telegram.org/js/telegram-web-app.js"></script>
+	<script src="app.js"></script>
 </body>
 </html>
