--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         table {
             width: 100%;
             border-collapse: collapse;
+    	    background: var(--tg-theme-header-bg-color);
         }
 
         th, td {
