--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: var(--tg-theme-header-bg-color);
             margin: 0;
             padding: 0;
             display: flex;
@@ -41,13 +41,11 @@
         h1 {
             text-align: center;
         }
-
         table {
             width: 100%;
             border-collapse: collapse;
-    	    background: var(--tg-theme-header-bg-color);
+    	    background: rgba(192, 192, 192, 0.5);
         }
-
         th, td {
             padding: 10px;
             text-align: left;
@@ -55,7 +53,7 @@
         }
 
         th {
-            background-color: #f9f9f9;
+            background-color: #c0c0c0;
         }
 
         tr:hover {
