--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
             padding: 10px;
             text-align: left;
             border-bottom: 1px solid #ddd;
+	    color: white;
         }
 
         th {
             background-color: #c0c0c0;
+	    color: white;
         }
 
         tr:hover {
