--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
         h1 {
             text-align: center;
+	    color: var(--tg-theme-text-color);
         }
         table {
             width: 100%;
@@ -50,12 +51,12 @@
             padding: 10px;
             text-align: left;
             border-bottom: 1px solid #ddd;
-	    color: white;
+	    color: var(--tg-theme-text-color);
         }
 
         th {
             background-color: #c0c0c0;
-	    color: white;
+	    color: var(--tg-theme-text-color);
         }
 
         tr:hover {
