--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         h1 {
             text-align: center;
-	    color: var(--tg-theme-text-color);
+	    color: var(--tg-theme-header-bg-color);
         }
         table {
             width: 100%;
@@ -51,12 +51,12 @@
             padding: 10px;
             text-align: left;
             border-bottom: 1px solid #ddd;
-	    color: var(--tg-theme-text-color);
+	    color: var(--tg-theme-header-bg-color);
         }
 
         th {
             background-color: #c0c0c0;
-	    color: var(--tg-theme-text-color);
+	    color: var(--tg-theme-header-bg-color);
         }
 
         tr:hover {
