--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	    border: 0;
 	    border-radius: 5px;
 	    margin-top: 50px;
-	    height: 70px;
+	    height: 90px;
 	    width: 200px;
 	    font-size: 20px;
 	    cursor: pointer;
@@ -51,7 +51,7 @@
             padding: 10px;
             text-align: left;
             border-bottom: 1px solid #ddd;
-	    color: grey;
+	    color: #2d3d4f;
         }
 
         th {
