--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             padding: 10px;
             text-align: left;
             border-bottom: 1px solid #ddd;
-	    color: #2d3d4f;
+	    color: white;
         }
 
         th {
-            background-color: #c0c0c0;
-	    color: grey;
+            background-color: #2d3d4f;
+	    color: white;
         }
 
         tr:hover {
