--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         h1 {
             text-align: center;
-	    color: grey;
+	    color: white;
         }
         table {
             width: 100%;
