--- a/index.html
+++ b/index.html
@@ -26,13 +26,18 @@
         }
 	
 	button {
+    	    display: flex;
+    	    margin: 0 auto;
 	    border: 0;
 	    border-radius: 5px;
 	    margin-top: 50px;
-	    height: 90px;
+	    height: 70px;
 	    width: 200px;
 	    font-size: 20px;
 	    cursor: pointer;
+	}
+	footer {
+	allign: center;
 	}
 	
 	button:hover {
@@ -106,8 +111,10 @@
                 </tr>
             </tbody>
         </table>
-        <button id="A">Посмотреть историю матчей команды А</button>
-	<button id="B">Посмотреть историю матчей команды Б</button>
+	<footer>
+            <button id="A">Посмотреть историю матчей команды А</button>
+	    <button id="B">Посмотреть историю матчей команды Б</button>
+	</footer>
     </main>
 </body>
 </html>
