--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         h1 {
             text-align: center;
-	    color: white;
+	    color: var(--tg-theme-text-color);
         }
         table {
             width: 100%;
