--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+	    color: var(--tg-theme-text-color);
             background-color: var(--tg-theme-header-bg-color);
             margin: 0;
             padding: 0;
@@ -45,7 +46,6 @@
 
         h1 {
             text-align: center;
-	    color: var(--tg-theme-button-text-color);
         }
         table {
             width: 100%;
