--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             font-family: Arial, sans-serif;
 	    color: var(--tg-theme-text-color);
-            background-color: var(--tg-theme-header-bg-color);
+	    background: var(--tg-theme-bg-color);
             margin: 0;
             padding: 0;
             display: flex;
