--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 	
 	button {
     	    display: flex;
+	    background: var(--tg-theme-button-color);
+	    color: var(--tg-theme-button-text-color);
     	    margin: 0 auto;
 	    border: 0;
 	    border-radius: 5px;
