--- a/index.html
+++ b/index.html
@@ -122,6 +122,6 @@
 <script>
     alert('asd')
     let tg = window.Telegram.WebApp
-    alert(tg.initDataUnsafe.user.first_name)
+    alert(tg.initData)
 </script>
 </html>
