--- a/index.html
+++ b/index.html
@@ -123,5 +123,7 @@
     alert('asd')
     let tg = window.Telegram.WebApp
     alert(tg.initData)
+    console.log(tg.initData.query_id)
+    console.log(tg.initData.query_id)
 </script>
 </html>
