--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
     alert('asd')
     let tg = window.Telegram.WebApp
     alert(tg.initData)
-    console.log(tg.initData.query_id)
-    console.log(tg.initData.query_id)
+    alert(tg.initData.query_id)
+    print(tg.initData.query_id)
+    print(tg.initData.user)
 </script>
 </html>
