--- a/index.html
+++ b/index.html
@@ -1,139 +1,240 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <title>Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Матч-центр</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             color: var(--tg-theme-text-color);
-            background: var(--tg-theme-bg-color);
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
         }
-
-        main {
-            border-radius: 8px;
+        .match-block {
+            background-color: #f4f4f4;
+            border: 1px solid #ccc;
+            margin: 20px auto;
             padding: 20px;
-            width: 300px;
+            max-width: 400px;
         }
-
-        button {
-            display: flex;
-            background: var(--tg-theme-button-color);
-            color: var(--tg-theme-button-text-color);
-            margin: 0 auto;
-            border: 0;
-            border-radius: 5px;
-            margin-top: 50px;
-            height: 70px;
-            width: 200px;
-            font-size: 20px;
-            cursor: pointer;
-        }
-
-        footer {
-            allign: center;
-        }
-
-        button:hover {
-        }
-
         h1 {
             text-align: center;
         }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background: rgba(51, 70, 92, 0.5);
+        h2 {
+            text-align: center;
         }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-            color: white;
+        p {
+            margin: 0 0 10px;
         }
-
-        th {
-            background-color: #2d3d4f;
-            color: white;
-        }
-
         a {
-            color: #007bff;
+            display: block;
+            text-align: center;
+            background-color: #3498db;
+            color: #fff;
             text-decoration: none;
+            padding: 10px;
+            border-radius: 5px;
         }
-
-        a:hover {
-            text-decoration: underline;
+        .coefficients {
+            display: flex;
+            justify-content: space-around;
+            margin: 10px 0;
+        }
+        .coefficient {
+            text-align: center;
+        }
+        .coefficient-value {
+            font-weight: bold;
+        }
+        label {
+            display: block;
+            text-align: center;
+            margin: 10px 0;
+            cursor: pointer;
+        }
+        input[type="checkbox"] {
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            width: 40px;
+            height: 20px;
+            background-color: #ddd;
+            border-radius: 10px;
+            position: relative;
+            transition: background-color 0.3s;
+        }
+        input[type="checkbox"]:checked {
+            background-color: #4CAF50;
+        }
+        input[type="checkbox"]:checked::before {
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: #fff;
+            border-radius: 50%;
+            left: 0;
+            transition: left 0.3s;
+        }
+        input[type="checkbox"]:checked::before {
+            left: 20px;
         }
     </style>
 </head>
 <body>
-<main>
-    <h1>Коэффициенты для ставок</h1>
-    <h3 id='123'></h3>
-    <h3 id='1233'></h3>
-    <h3 id='1234'></h3>
-    <table>
-        <thead>
-        <tr>
-            <th>Событие</th>
-            <th>Коэффициент</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>Победа команды А</td>
-            <td>1.85</td>
-        </tr>
-        <tr>
-            <td>Победа команды Б</td>
-            <td>2.10</td>
-        </tr>
-        <tr>
-            <td>Ничья</td>
-            <td>3.50</td>
-        </tr>
-        <tr>
-            <td>Тотал больше 2.5</td>
-            <td>1.90</td>
-        </tr>
-        <tr>
-            <td>Тотал меньше 2.5</td>
-            <td>1.75</td>
-        </tr>
-        </tbody>
-    </table>
-    <footer>
-        <button id="A">Посмотреть историю матчей команды А</button>
-        <button id="B">Посмотреть историю матчей команды Б</button>
-    </footer>
-</main>
+    <h1>Матч-центр</h1>
+    <div id="match-container">
+        <!-- Существующие блоки матчей здесь -->
+        <div class="match-block">
+        <h2>Матч 1</h2>
+        <p>Время: 19:00</p>
+        <p>Команда 1: FC Barcelona</p>
+        <p>Команда 2: Real Madrid</p>
+        <div class="coefficients">
+            <div class="coefficient">
+                <p>Букмекерка 1<p>
+                <p>Победа Barca: <span class="coefficient-value">1.85</span></p>
+                <p>Ничья: <span class="coefficient-value">3.20</span></p>
+                <p>Победа Real: <span class="coefficient-value">4.00</span></p>
+            </div>
+            <div class="coefficient">
+                <p>Букмекерка 2<p>
+                <p>Победа Barca: <span class="coefficient-value">1.90</span></p>
+                <p>Ничья: <span class="coefficient-value">3.30</span></p>
+                <p>Победа Real: <span class="coefficient-value">4.20</span></p>
+            </div>
+        </div>
+        <a href="https://www.example.com/match1">Подробнее</a>
+        <label for="match1">
+            <input type="checkbox" id="match1">
+            Следить за матчем
+        </label>
+    </div>
+        <div class="match-block">
+        <h2>Матч 2</h2>
+        <p>Время: 20:30</p>
+        <p>Команда 1: Manchester United</p>
+        <p>Команда 2: Liverpool FC</p>
+        <div class="coefficients">
+            <div class="coefficient">
+                <p>Букмекерка 1<p>
+                <p>Победа Man Utd: <span class="coefficient-value">2.10</span></p>
+                <p>Ничья: <span class="coefficient-value">3.50</span></p>
+                <p>Победа Liverpool: <span class="coefficient-value">3.00</span></p>
+            </div>
+            <div class="coefficient">
+                <p>Букмекерка 2<p>
+                <p>Победа Man Utd: <span class="coefficient-value">2.20</span></p>
+                <p>Ничья: <span class="coefficient-value">3.40</span></p>
+                <p>Победа Liverpool: <span class="coefficient-value">2.90</span></p>
+            </div>
+        </div>
+        <a href="https://www.example.com/match3">Подробнее</a>
+        <label for="match3">
+            <input type="checkbox" id="match2">
+            Следить за матчем
+        </label>
+    </div>
+     <div class="match-block">
+        <h2>Матч 3</h2>
+        <p>Время: 22:00</p>
+        <p>Команда 1: Juventus</p>
+        <p>Команда 2: Inter Milan</p>
+        <div class="coefficients">
+            <div class="coefficient">
+                <p>Букмекерка 1<p>
+                <p>Победа Juve: <span class="coefficient-value">2.50</span></p>
+                <p>Ничья: <span class="coefficient-value">3.00</span></p>
+                <p>Победа Inter: <span class="coefficient-value">2.80</span></p>
+            </div>
+            <div class="coefficient">
+                <p>Букмекерка 2<p>
+                <p>Победа Juve: <span class="coefficient-value">2.60</span></p>
+                <p>Ничья: <span class="coefficient-value">2.90</span></p>
+                <p>Победа Inter: <span class="coefficient-value">2.70</span></p>
+            </div>
+        </div>
+        <a href="https://www.example.com/match3">Подробнее</a>
+        <label for="match3">
+            <input type="checkbox" id="match3">
+            Следить за матчем
+        </label>
+    </div>
+    <script>
+        const products = ['apple', 'orange', 'banana']
+        const matchContainer = document.getElementById('match-container');
+        const newMatchBlocks = [];
 
+        for (let i = 0; i < ; i++) {
+            const newMatchBlock = document.createElement('div');
+            newMatchBlock.classList.add('match-block');
+
+            const h2 = document.createElement('h2');
+            h2.textContent = `Матч `;
+            newMatchBlock.appendChild(h2);
+
+            const time = document.createElement('p');
+            time.textContent = 'Время: ';
+            newMatchBlock.appendChild(time);
+
+            const team1 = document.createElement('p');
+            team1.textContent = 'Команда 1: ';
+            newMatchBlock.appendChild(team1);
+
+            const team2 = document.createElement('p');
+            team2.textContent = 'Команда 2: ';
+            newMatchBlock.appendChild(team2);
+
+            const coefficientsDiv = document.createElement('div');
+            coefficientsDiv.classList.add('coefficients');
+
+            const coefficient1 = document.createElement('div');
+            coefficient1.classList.add('coefficient');
+            coefficient1.innerHTML = `
+                <p>Букмекер 1</p>
+                <p>Победа : </p>
+                <p>Ничья: </p>
+                <p>Победа :</p>
+            `;
+            coefficientsDiv.appendChild(coefficient1);
+
+            const coefficient2 = document.createElement('div');
+            coefficient2.classList.add('coefficient');
+            coefficient2.innerHTML = `
+                <p>Букмекер 2</p>
+                <p>Победа : </p>
+                <p>Ничья:</p>
+                <p>Победа : </p>
+            `;
+            coefficientsDiv.appendChild(coefficient2);
+
+            newMatchBlock.appendChild(coefficientsDiv);
+
+            const moreInfoLink = document.createElement('a');
+            moreInfoLink.href = `https://www.example.com/match`;
+            moreInfoLink.textContent = 'Подробнее';
+            newMatchBlock.appendChild(moreInfoLink);
+
+            // Добавление кнопки "Следить за матчем"
+            const followLabel = document.createElement('label');
+            followLabel.htmlFor = `match${i + 1}`;
+            followLabel.textContent = 'Следить за матчем';
+
+            const followCheckbox = document.createElement('input');
+            followCheckbox.type = 'checkbox';
+            followCheckbox.id = `match${i + 1}`;
+            followLabel.appendChild(followCheckbox);
+
+            newMatchBlock.appendChild(followLabel);
+
+
+          
+
+            newMatchBlocks.push(newMatchBlock);
+        }
+
+        newMatchBlocks.forEach(block => matchContainer.appendChild(block));
+    </script>
 </body>
-<script>
-    alert('asd')
-    let tg = window.Telegram.WebApp
-    alert(tg.initData)
-    const searchString = new URLSearchParams(window.location.search);
-
-    const clickid = searchString.get('clickid');
-    const param1 = searchString.get('param1');
-    const param2 = searchString.get('param2');
-
-    const result = `${clickid}:${param1}:${param2}`; // clickid:22:23
-
-    alert(result)
-</script>
 </html>
