--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         body {
             font-family: Arial, sans-serif;
             color: var(--tg-theme-text-color);
+            background: var(--tg-theme-bg-color);
             margin: 0;
             padding: 0;
         }
-
         .match-block {
             background-color: #f4f4f4;
             border: 1px solid #ccc;
@@ -20,50 +20,41 @@
             padding: 20px;
             max-width: 400px;
         }
-
         h1 {
             text-align: center;
         }
-
         h2 {
             text-align: center;
         }
-
         p {
             margin: 0 0 10px;
         }
-
         a {
             display: block;
             text-align: center;
-            background-color: #3498db;
-            color: #fff;
+            background: var(--tg-theme-button-color);
+            color: var(--tg-theme-button-text-color);
             text-decoration: none;
             padding: 10px;
             border-radius: 5px;
         }
-
         .coefficients {
             display: flex;
             justify-content: space-around;
             margin: 10px 0;
         }
-
         .coefficient {
             text-align: center;
         }
-
         .coefficient-value {
             font-weight: bold;
         }
-
         label {
             display: block;
             text-align: center;
             margin: 10px 0;
             cursor: pointer;
         }
-
         input[type="checkbox"] {
             appearance: none;
             -webkit-appearance: none;
@@ -75,11 +66,9 @@
             position: relative;
             transition: background-color 0.3s;
         }
-
         input[type="checkbox"]:checked {
             background-color: #4CAF50;
         }
-
         input[type="checkbox"]:checked::before {
             content: '';
             position: absolute;
@@ -90,7 +79,6 @@
             left: 0;
             transition: left 0.3s;
         }
-
         input[type="checkbox"]:checked::before {
             left: 20px;
         }
