--- a/index.html
+++ b/index.html
@@ -13,12 +13,21 @@
     <!-- Существующие блоки матчей здесь -->
     <div class="match-block">
         <h2>Матч 1</h2>
-        <p>Время: 19:00</p>
-        <p>Команда 1: FC Barcelona</p>
-        <p>Команда 2: Real Madrid</p>
+        <div class="probs">
+            <div class="prob">
+                <p>Время: 19:00</p>
+                <p>Команда 1: FC Barcelona</p>
+                <p>Команда 2: Real MadridC</p>
+            </div>
+            <div class="prob">
+                <p>Вероятный победитель</p>
+                <p>Команда :</p>
+                <p></p>
+            </div>
+        </div>
         <div class="coefficients">
             <div class="coefficient">
-                <p>Букмекерка 1
+                <p>Букмекерка 1</p>
                 <p>
                 <p>Победа Barca: <span class="coefficient-value">1.85</span></p>
                 <p>Ничья: <span class="coefficient-value">3.20</span></p>
@@ -40,12 +49,21 @@
     </div>
     <div class="match-block">
         <h2>Матч 2</h2>
-        <p>Время: 20:30</p>
-        <p>Команда 1: Manchester United</p>
-        <p>Команда 2: Liverpool FC</p>
+        <div class="probs">
+            <div class="prob">
+                <p>Время: 20:30</p>
+                <p>Команда 1: Manchester United</p>
+                <p>Команда 2: Liverpool FC</p>
+            </div>
+            <div class="prob">
+                <p>Вероятный победитель</p>
+                <p>Команда :</p>
+                <p></p>
+            </div>
+        </div>
         <div class="coefficients">
             <div class="coefficient">
-                <p>Букмекерка 1
+                <p>Букмекерка 1</p>
                 <p>
                 <p>Победа Man Utd: <span class="coefficient-value">2.10</span></p>
                 <p>Ничья: <span class="coefficient-value">3.50</span></p>
@@ -59,20 +77,29 @@
                 <p>Победа Liverpool: <span class="coefficient-value">2.90</span></p>
             </div>
         </div>
-        <a href="https://www.example.com/match3">Подробнее</a>
-        <label for="match3">
+        <a href="https://www.example.com/match2">Подробнее</a>
+        <label for="match2">
             <input type="checkbox" id="match2">
             Следить за матчем
         </label>
     </div>
     <div class="match-block">
         <h2>Матч 3</h2>
-        <p>Время: 22:00</p>
-        <p>Команда 1: Juventus</p>
-        <p>Команда 2: Inter Milan</p>
+        <div class="probs">
+            <div class="prob">
+                <p>Время: 22:00</p>
+                <p>Команда 1: Juventus</p>
+                <p>Команда 2: Inter Milan</p>
+            </div>
+            <div class="prob">
+                <p>Вероятный победитель</p>
+                <p>Команда :</p>
+                <p></p>
+            </div>
+        </div>
         <div class="coefficients">
             <div class="coefficient">
-                <p>Букмекерка 1
+                <p>Букмекерка 1</p>
                 <p>
                 <p>Победа Juve: <span class="coefficient-value">2.50</span></p>
                 <p>Ничья: <span class="coefficient-value">3.00</span></p>
