--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
                 <p>Победа Real: <span class="coefficient-value">4.20</span></p>
             </div>
         </div>
-        <a href="https://www.example.com/match1">Подробнее</a>
-        <label for="match1">
-            <input type="checkbox" id="match1">
-            Следить за матчем
-        </label>
+        <a href="">Вывести данные</a>
     </div>
     <div class="match-block">
         <h2>Матч 2</h2>
@@ -77,11 +73,7 @@
                 <p>Победа Liverpool: <span class="coefficient-value">2.90</span></p>
             </div>
         </div>
-        <a href="https://www.example.com/match2">Подробнее</a>
-        <label for="match2">
-            <input type="checkbox" id="match2">
-            Следить за матчем
-        </label>
+        <a href="">Вывести данные</a>
     </div>
     <div class="match-block">
         <h2>Матч 3</h2>
@@ -113,11 +105,7 @@
                 <p>Победа Inter: <span class="coefficient-value">2.70</span></p>
             </div>
         </div>
-        <a href="https://www.example.com/match3">Подробнее</a>
-        <label for="match3">
-            <input type="checkbox" id="match3">
-            Следить за матчем
-        </label>
+        <a href="">Вывести данные</a>
     </div>
 </div>
 </body>
