--- a/index.html
+++ b/index.html
@@ -174,22 +174,9 @@
     //     newMatchBlock.appendChild(coefficientsDiv);
     //
     //     const moreInfoLink = document.createElement('a');
-    //     moreInfoLink.href = `https://www.example.com/match`;
-    //     moreInfoLink.textContent = 'Подробнее';
+    //     moreInfoLink.href = ``;
+    //     moreInfoLink.textContent = 'Вывести данные';
     //     newMatchBlock.appendChild(moreInfoLink);
-    //
-    //     // Добавление кнопки "Следить за матчем"
-    //     const followLabel = document.createElement('label');
-    //     followLabel.htmlFor = `match${i + 1}`;
-    //     followLabel.textContent = 'Следить за матчем';
-    //
-    //     const followCheckbox = document.createElement('input');
-    //     followCheckbox.type = 'checkbox';
-    //     followCheckbox.id = `match${i + 1}`;
-    //     followLabel.appendChild(followCheckbox);
-    //
-    //     newMatchBlock.appendChild(followLabel);
-    //
     //
     //     newMatchBlocks.push(newMatchBlock);
     // }
