--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
 
     alert(result)
 
+     let params = (new URL(document.location)).searchParams; 
+     console.log(params.get("uid"));
+
     // const products = ['apple', 'orange', 'banana']
     // const matchContainer = document.getElementById('match-container');
     // const newMatchBlocks = [];
