--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
 
      let params = (new URL(document.location)).searchParams; 
      console.log(params.get("uid"));
+    // window.addEventListener('scroll', function() {
+    // if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
     // const matchContainer = document.getElementById('match-container');
     // const newMatchBlocks = [];
     //
