--- a/index.html
+++ b/index.html
@@ -114,18 +114,8 @@
     alert(tg.initData)
     alert(tg)
     alert('asd')
-    const searchString = new URLSearchParams(window.location.search);
-
-    const clickid = searchString.get('clickid');
-    const param1 = searchString.get('param1');
-    const param2 = searchString.get('param2');
-
-    const result = `${clickid}:${param1}:${param2}`; // clickid:22:23
-
-    alert(result)
-
-     let params = (new URL(document.location)).searchParams; 
-     console.log(params.get("uid"));
+    var strGET = window.location.search.replace('?', '');
+    alert(strGET)
     // window.addEventListener('scroll', function() {
     // if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
     // const matchContainer = document.getElementById('match-container');
