--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 </body>
 <script>
     let tg = window.Telegram.WebApp
-    alert(tg.initData)
-    alert(tg)
-    alert('asd')
+
+
     var strGET = window.location.search.replace('?', '');
     alert(strGET)
+    alert('asdasd')
     // window.addEventListener('scroll', function() {
     // if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
     // const matchContainer = document.getElementById('match-container');
