--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     let tg = window.Telegram.WebApp
 
 
-    var strGET = window.location.search.replace('?', '');
+    var strGET = window.location.search;
     alert(strGET)
     alert('asdasd')
     // window.addEventListener('scroll', function() {
