--- a/index.html
+++ b/index.html
@@ -113,68 +113,82 @@
     let tg = window.Telegram.WebApp
 
 
-    var strGET = window.location.search;
+    var params = window
+        .location
+        .search
+        .replace('?', '')
+        .split('&')
+        .reduce(
+            function (p, e) {
+                var a = e.split('=');
+                p[decodeURIComponent(a[0])] = decodeURIComponent(a[1]);
+                return p;
+            },
+            {}
+        );
+
+    console.log(params['data']);
     alert(strGET)
     alert('asdasd')
-    // window.addEventListener('scroll', function() {
-    // if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
-    // const matchContainer = document.getElementById('match-container');
-    // const newMatchBlocks = [];
-    //
-    // for (let i = 0; i < 3; i++) {
-    //     const newMatchBlock = document.createElement('div');
-    //     newMatchBlock.classList.add('match-block');
-    //
-    //     const h2 = document.createElement('h2');
-    //     h2.textContent = `Матч `;
-    //     newMatchBlock.appendChild(h2);
-    //
-    //     const time = document.createElement('p');
-    //     time.textContent = 'Время: ';
-    //     newMatchBlock.appendChild(time);
-    //
-    //     const team1 = document.createElement('p');
-    //     team1.textContent = 'Команда 1: ';
-    //     newMatchBlock.appendChild(team1);
-    //
-    //     const team2 = document.createElement('p');
-    //     team2.textContent = 'Команда 2: ';
-    //     newMatchBlock.appendChild(team2);
-    //
-    //     const coefficientsDiv = document.createElement('div');
-    //     coefficientsDiv.classList.add('coefficients');
-    //
-    //     const coefficient1 = document.createElement('div');
-    //     coefficient1.classList.add('coefficient');
-    //     coefficient1.innerHTML = `
-    //             <p>Букмекер 1</p>
-    //             <p>Победа : </p>
-    //             <p>Ничья: </p>
-    //             <p>Победа :</p>
-    //         `;
-    //     coefficientsDiv.appendChild(coefficient1);
-    //
-    //     const coefficient2 = document.createElement('div');
-    //     coefficient2.classList.add('coefficient');
-    //     coefficient2.innerHTML = `
-    //             <p>Букмекер 2</p>
-    //             <p>Победа : </p>
-    //             <p>Ничья:</p>
-    //             <p>Победа : </p>
-    //         `;
-    //     coefficientsDiv.appendChild(coefficient2);
-    //
-    //     newMatchBlock.appendChild(coefficientsDiv);
-    //
-    //     const moreInfoLink = document.createElement('a');
-    //     moreInfoLink.href = ``;
-    //     moreInfoLink.textContent = 'Вывести данные';
-    //     newMatchBlock.appendChild(moreInfoLink);
-    //
-    //     newMatchBlocks.push(newMatchBlock);
-    // }
-    //
-    // newMatchBlocks.forEach(block => matchContainer.appendChild(block));
+    window.addEventListener('scroll', function () {
+        if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
+            const matchContainer = document.getElementById('match-container');
+            const newMatchBlocks = [];
+
+            for (let i = 0; i < 3; i++) {
+                const newMatchBlock = document.createElement('div');
+                newMatchBlock.classList.add('match-block');
+
+                const h2 = document.createElement('h2');
+                h2.textContent = `Матч `;
+                newMatchBlock.appendChild(h2);
+
+                const time = document.createElement('p');
+                time.textContent = 'Время: ';
+                newMatchBlock.appendChild(time);
+
+                const team1 = document.createElement('p');
+                team1.textContent = 'Команда 1: ';
+                newMatchBlock.appendChild(team1);
+
+                const team2 = document.createElement('p');
+                team2.textContent = 'Команда 2: ';
+                newMatchBlock.appendChild(team2);
+
+                const coefficientsDiv = document.createElement('div');
+                coefficientsDiv.classList.add('coefficients');
+
+                const coefficient1 = document.createElement('div');
+                coefficient1.classList.add('coefficient');
+                coefficient1.innerHTML = `
+                <p>Букмекер 1</p>
+                <p>Победа : </p>
+                <p>Ничья: </p>
+                <p>Победа :</p>
+            `;
+                coefficientsDiv.appendChild(coefficient1);
+
+                const coefficient2 = document.createElement('div');
+                coefficient2.classList.add('coefficient');
+                coefficient2.innerHTML = `
+                <p>Букмекер 2</p>
+                <p>Победа : </p>
+                <p>Ничья:</p>
+                <p>Победа : </p>
+            `;
+                coefficientsDiv.appendChild(coefficient2);
+
+                newMatchBlock.appendChild(coefficientsDiv);
+
+                const moreInfoLink = document.createElement('a');
+                moreInfoLink.href = ``;
+                moreInfoLink.textContent = 'Вывести данные';
+                newMatchBlock.appendChild(moreInfoLink);
+
+                newMatchBlocks.push(newMatchBlock);
+            }
+
+            newMatchBlocks.forEach(block => matchContainer.appendChild(block));
 </script>
 
 </html>
