--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     arr = value.split('*')
     console.log(arr)
     console.log(arr.length)
-    console.log(arr[0][1])
+    console.log(arr.split('/')[0][1])
     window.addEventListener('scroll', function () {
         if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
             const matchContainer = document.getElementById('match-container');
